Sat Jan  7 17:30:48 CET 2012
	Digest authentication expects nonce count in base 16, not base 10
	(#2061). -tclaveirole

Thu Jan  5 22:01:37 CET 2012
	Partial fix for #2059, digest authentication with GET arguments. -CG

Thu Dec  1 15:22:57 CET 2011
	Updated authorization_example.c to actually demonstrate the current
	MHD API. -SG

Mon Nov 21 18:51:30 CET 2011
	Added option to suppress generation of the 'Date:' header to be
	used on embedded systems without RTC.  Documented the new option
	and the configure options. -CG

Sat Nov 19 20:08:40 CET 2011
	Releasing 0.9.17. -CG

Fri Nov 18 20:17:22 CET 2011
	Fixing return value of MHD_get_timeout if timeouts are not in use.
        (#1914). -rboulton

Sun Nov 13 13:34:29 CET 2011
	Trying to fix accidental addition of a "Connection: close" footer
	under certain (rare) circumstances. -CG

Fri Nov  4 10:03:00 CET 2011
	Small updates to the tutorial.
	Releasing 0.9.16. -CG

Thu Nov  3 10:14:59 CET 2011
	shutdown(RDWR) fails on OS X after shutdown(RD), so only use
	shutdown(WR) if we already closed the socket for reading (otherwise
	OS X might not do shutdown (WR) at all). -CG

Tue Nov  1 18:51:50 CET 2011
	Force adding of 'Connection: close' to the header if we (for whatever
	reason) are shutting down the socket for reading (see also
	#1760). -CG

Thu Oct 27 14:16:34 CEST 2011
	Treat EAGAIN the same way as EINTR (helps on W32). -LRN

Wed Oct 12 10:40:12 CEST 2011
	Made sockets blocking again for non-Linux platforms as non-blocking
	sockets cause problems (#1824) on Cygwin but offer better performance
	on Linux (see change on August 11 2011). -CG/pross

Fri Oct  7 19:50:07 CEST 2011
 	Fixed problems with testcases on W32. -LRN

Fri Sep 30 17:56:36 CEST 2011
	Fixed MHD_CONNECTION_OPTION_TIMEOUT for HTTPS (#1811). -CG

Wed Sep 28 08:37:55 CEST 2011
	Releasing libmicrohttpd 0.9.15. -CG

Tue Sep 27 13:07:36 CEST 2011
	Added ability to access URL arguments of the form 'url?foo' (without